--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 </head>
 <body>
   <h1>Our Products</h1>
-  <ul id="product-list">
-    </ul>
-  <a href="details.html?id=1">See details of Product 1</a>  </body>
-<script src="script.js"></script>
-
+  <ul id="product-list"></ul>
+  <a href="details.html?id=1">See details of Product 1</a>
+  <script src="script.js"></script>  </body>
 </html>
