--- a/details.html
+++ b/details.html
@@ -6,9 +6,12 @@
   <title>Product Details</title>
 </head>
 <body>
-  <h2>Product Details</h2>
+  <!-- <h2>Product Details</h2>
   <p id="product-name"></p>
   <p id="product-price"></p>
-  <p id="product-description"></p>
+  <p id="product-description"></p> -->
+
+ 
+
   <script src="script.js"></script>  </body>
 </html>
