--- a/index.html
+++ b/index.html
@@ -9,5 +9,21 @@
   <h1>Our Products</h1>
   <ul id="product-list"></ul>
   <a href="details.html?id=1">See details of Product 1</a>
+
+  <table>
+    <thead>
+       <tr>
+          <th>Image</th>
+          <th>Product name</th>
+          <th>Price</th>
+          <th>inventory</th>
+          <th>Product code</th>
+       </tr>
+    </thead>
+    <tbody id="data-output">
+       <!-- Prodcuts from javascript file in here. -->
+    </tbody>
+ </table>
+ 
   <script src="script.js"></script>  </body>
 </html>
