--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+
   <title>Products</title>
 </head>
 <body>
@@ -10,14 +13,15 @@
   <ul id="product-list"></ul>
   <a href="details.html?id=1">See details of Product 1</a>
 
-  <table>
+  <table class="table table-dark">
     <thead>
        <tr>
-          <th>Image</th>
+          <th>Id</th>
           <th>Product name</th>
+          <th>Description</th>
           <th>Price</th>
-          <th>inventory</th>
-          <th>Product code</th>
+          <th>Image Paht1</th>
+          <th>Price after discount</th>
        </tr>
     </thead>
     <tbody id="data-output">
@@ -25,5 +29,8 @@
     </tbody>
  </table>
  
-  <script src="script.js"></script>  </body>
+  <script src="script.js"></script> 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+</body>
 </html>
