--- a/index.html
+++ b/index.html
@@ -3,34 +3,113 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-
-  <title>Products</title>
+  <title>Product Details</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <h1>Our Products</h1>
-  <ul id="product-list"></ul>
-  <a href="details.html?id=1">See details of Product 1</a>
+  <div class="product-list-wrapper">
+    <div class="product-list" id="product-list">
+      <!-- Product cards will be appended here -->
+    </div>
+  </div>
 
-  <table class="table table-dark">
-    <thead>
-       <tr>
-          <th>Id</th>
-          <th>Product name</th>
-          <th>Description</th>
-          <th>Price</th>
-          <th>Image Paht1</th>
-          <th>Price after discount</th>
-       </tr>
-    </thead>
-    <tbody id="data-output">
-       <!-- Prodcuts from javascript file in here. -->
-    </tbody>
- </table>
- 
-  <script src="script.js"></script> 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Include jQuery -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script>
+    $(document).ready(function() {
+      fetch('products.json')
+        .then(function(response) {
+          if (!response.ok) {
+            throw new Error('Network response was not ok ' + response.statusText);
+          }
+          return response.json();
+        })
+        .then(function(products) {
+          let productList = document.getElementById('product-list');
 
+          products.forEach(function(product) {
+            // Create a new product card
+            let productCard = document.createElement('div');
+            productCard.className = 'wrapper';
+
+            productCard.innerHTML = `
+              <div class="container">
+                <div class="top"></div>
+                <div class="bottom">
+                  <div class="left">
+                    <div class="details">
+                      <h1>${product.Name}</h1>
+                      <p>${product.Price}</p>
+                    </div>
+                    <div class="buy"><i class="material-icons">add_shopping_cart</i></div>
+                  </div>
+                  <div class="right">
+                    <div class="done"><i class="material-icons">done</i></div>
+                    <div class="details">
+                      <h1>${product.Name}</h1>
+                      <p>Added to your cart</p>
+                      <p>${product.Description}</p>
+                      <p>Price After Discount: ${product.PriceAfterDiscount}</p>
+                      <p>Weight: ${product.Weight}</p>
+                      <p>Id: ${product.Id}</p>
+                      <p>Image Path 1: ${product.ImagePath1}</p>
+                      <p>Image Path 2: ${product.ImagePath2}</p>
+                    </div>
+                    <div class="remove"><i class="material-icons">clear</i></div>
+                  </div>
+                </div>
+              </div>
+              <div class="inside">
+                <div class="icon"><i class="material-icons">info_outline</i></div>
+                <div class="contents">
+                  <table>
+                    <tr>
+                      <th>Price After Discount</th>
+                      <th>Weight</th>
+                    </tr>
+                    <tr>
+                      <td>${product.PriceAfterDiscount}</td>
+                      <td>${product.Weight}</td>
+                    </tr>
+                    <tr>
+                      <th>Id</th>
+                      <th>Image Path 1</th>
+                    </tr>
+                    <tr>
+                      <td>${product.Id}</td>
+                      <td>${product.ImagePath1}</td>
+                    </tr>
+                    <tr>
+                      <th>Description</th>
+                      <th>Image Path 2</th>
+                    </tr>
+                    <tr>
+                      <td>${product.Description}</td>
+                      <td>${product.ImagePath2}</td>
+                    </tr>
+                  </table>
+                </div>
+              </div>
+            `;
+
+            productList.appendChild(productCard);
+          });
+
+          // Add event listeners to dynamically added elements
+          $('.buy').click(function() {
+            $(this).closest('.bottom').addClass('clicked');
+          });
+
+          $('.remove').click(function() {
+            $(this).closest('.bottom').removeClass('clicked');
+          });
+        })
+        .catch(function(error) {
+          console.error('There has been a problem with your fetch operation:', error);
+        });
+    });
+  </script>
 </body>
 </html>
+
