--- a/details.html
+++ b/details.html
@@ -8,8 +8,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <div class="product-list" id="product-list">
-    <!-- Product cards will be appended here -->
+  <div class="product-list-wrapper">
+    <div class="product-list" id="product-list">
+      </div>
   </div>
 
   <!-- Include jQuery -->
