--- a/details.html
+++ b/details.html
@@ -12,6 +12,26 @@
     <div class="product-list" id="product-list">
       </div>
   </div>
+  <div>
+    <p>slefnisbfkjsdsjkbcjks </p>
+    <p>slefnisbfkjsdsjkbcjks </p>
+    <p>slefnisbfkjsdsjkbcjks </p>
+    <p>slefnisbfkjsdsjkbcjks </p>
+    <p>slefnisbfkjsdsjkbcjks </p>
+    <p>slefnisbfkjsdsjkbcjks </p>
+    <p>slefnisbfkjsdsjkbcjks </p>
+    <p>slefnisbfkjsdsjkbcjks </p>
+    <p>slefnisbfkjsdsjkbcjks </p>
+    <p>slefnisbfkjsdsjkbcjks </p>
+    <p>slefnisbfkjsdsjkbcjks </p>
+    <p>slefnisbfkjsdsjkbcjks </p>
+    <p>slefnisbfkjsdsjkbcjks </p>
+    <p>slefnisbfkjsdsjkbcjks </p>
+    <p>slefnisbfkjsdsjkbcjks </p>
+    <p>slefnisbfkjsdsjkbcjks </p>
+    <p>slefnisbfkjsdsjkbcjks </p>
+    <p>slefnisbfkjsdsjkbcjks </p>
+  </div>
 
   <!-- Include jQuery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
